Time: 1030 ms (69.80%), Space: 359.2 MB (12.24%) - LeetHub